--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   background: #fff0f6;
   font-family: 'Comic Sans MS', cursive, sans-serif;
-  color: #d6336c;
+  color: #a60036;
   text-align: center;
   padding: 30px;
   cursor: none;
